flutter/ffi/lib/src/equalx_bindings.dart


typedef _LockErc20Native = ffi.Int32 Function(
  ffi.Pointer<ffi.Uint8>,
  ffi.Pointer<ffi.Uint8>,
  ffi.Pointer<ffi.Uint8>,
  ffi.Pointer<ffi.Uint8>,
  ffi.Pointer<ffi.Uint8>,
  ffi.Pointer<ffi.Uint8>,
  ffi.Pointer<ffi.Uint8>,
  ffi.Pointer<ffi.Uint8>,
  ffi.Uint64,
  ffi.Uint8,
  ffi.Pointer<ffi.Uint8>,
  ffi.Pointer<ffi.Uint8>,
  ffi.Uint32,
  ffi.Uint64,
  ffi.Pointer<ffi.Uint8>,
  ffi.Uint32,
  ffi.Pointer<ffi.Uint32>,
  ffi.Pointer<ffi.Uint8>,
  ffi.Pointer<ffi.Uint64>,
);
typedef _LockErc20Dart = int Function(
  ffi.Pointer<ffi.Uint8>,
  ffi.Pointer<ffi.Uint8>,
  ffi.Pointer<ffi.Uint8>,
  ffi.Pointer<ffi.Uint8>,
  ffi.Pointer<ffi.Uint8>,
  ffi.Pointer<ffi.Uint8>,
  ffi.Pointer<ffi.Uint8>,
  ffi.Pointer<ffi.Uint8>,
  int,
  int,
  ffi.Pointer<ffi.Uint8>,
  ffi.Pointer<ffi.Uint8>,
  int,
  int,
  ffi.Pointer<ffi.Uint8>,
  int,
  ffi.Pointer<ffi.Uint32>,
  ffi.Pointer<ffi.Uint8>,
  ffi.Pointer<ffi.Uint64>,
);

typedef _CapabilityQueryNative = ffi.Int32 Function(
  ffi.Pointer<NativeCapabilityDescriptor>,
);
typedef _CapabilityQueryDart = int Function(
  ffi.Pointer<NativeCapabilityDescriptor>,
);

typedef _RegisterEncPubNative = ffi.Int32 Function(
  ffi.Pointer<ffi.Uint8>,
  ffi.Pointer<ffi.Uint8>,
  ffi.Uint32,
);
typedef _RegisterEncPubDart = int Function(
  ffi.Pointer<ffi.Uint8>,
  ffi.Pointer<ffi.Uint8>,
  int,
);

typedef _GetEncPubNative = ffi.Int32 Function(
  ffi.Pointer<ffi.Uint8>,
  ffi.Pointer<ffi.Pointer<ffi.Uint8>>,
  ffi.Pointer<ffi.Uint32>,
);
typedef _GetEncPubDart = int Function(
  ffi.Pointer<ffi.Uint8>,
  ffi.Pointer<ffi.Pointer<ffi.Uint8>>,
  ffi.Pointer<ffi.Uint32>,
);

typedef _IsRegisteredNative = ffi.Int32 Function(
  ffi.Pointer<ffi.Uint8>,
  ffi.Pointer<ffi.Uint8>,
);
typedef _IsRegisteredDart = int Function(
  ffi.Pointer<ffi.Uint8>,
  ffi.Pointer<ffi.Uint8>,
);

typedef _MailboxPublishNative = ffi.Int32 Function(
  ffi.Pointer<ffi.Uint8>,
  ffi.Pointer<ffi.Uint8>,
  ffi.Uint32,
);
typedef _MailboxPublishDart = int Function(
  ffi.Pointer<ffi.Uint8>,
  ffi.Pointer<ffi.Uint8>,
  int,
);

typedef _FetchMessagesNative = ffi.Int32 Function(
  ffi.Pointer<ffi.Uint8>,
  ffi.Pointer<ffi.Pointer<ffi.Uint8>>,
  ffi.Pointer<ffi.Uint32>,
);
typedef _FetchMessagesDart = int Function(
  ffi.Pointer<ffi.Uint8>,
  ffi.Pointer<ffi.Pointer<ffi.Uint8>>,
  ffi.Pointer<ffi.Uint32>,
);

typedef _RegisterDeskNative = ffi.Int32 Function(ffi.Pointer<ffi.Uint8>);
typedef _RegisterDeskDart = int Function(ffi.Pointer<ffi.Uint8>);

typedef _ReserveAtomicSwapNative = ffi.Int32 Function(
  ffi.Pointer<ffi.Uint8>,
  ffi.Pointer<ffi.Uint8>,
  ffi.Pointer<ffi.Uint8>,
  ffi.Pointer<ffi.Uint8>,
  ffi.Pointer<ffi.Uint8>,
  ffi.Pointer<ffi.Uint8>,
  ffi.Uint64,
  ffi.Uint64,
);
typedef _ReserveAtomicSwapDart = int Function(
  ffi.Pointer<ffi.Uint8>,
  ffi.Pointer<ffi.Uint8>,
  ffi.Pointer<ffi.Uint8>,
  ffi.Pointer<ffi.Uint8>,
  ffi.Pointer<ffi.Uint8>,
  ffi.Pointer<ffi.Uint8>,
  int,
  int,
);

typedef _GetReservationNative = ffi.Int32 Function(
  ffi.Pointer<ffi.Uint8>,
  ffi.Pointer<NativeAtomicReservationCreatedEvent>,
);
typedef _GetReservationDart = int Function(
  ffi.Pointer<ffi.Uint8>,
  ffi.Pointer<NativeAtomicReservationCreatedEvent>,
);

typedef _DecodeReservationCreatedNative = ffi.Int32 Function(
  ffi.Pointer<ffi.Uint8>,
  ffi.Uint32,
  ffi.Pointer<ffi.Uint8>,
  ffi.Uint32,
  ffi.Pointer<NativeReservationCreatedEvent>,
);
typedef _DecodeReservationCreatedDart = int Function(
  ffi.Pointer<ffi.Uint8>,
  int,
  ffi.Pointer<ffi.Uint8>,
  int,
  ffi.Pointer<NativeReservationCreatedEvent>,
);

typedef _DecodeHashlockSetNative = ffi.Int32 Function(
  ffi.Pointer<ffi.Uint8>,
  ffi.Uint32,
  ffi.Pointer<ffi.Uint8>,
  ffi.Uint32,
  ffi.Pointer<NativeHashlockSetEvent>,
);
typedef _DecodeHashlockSetDart = int Function(
  ffi.Pointer<ffi.Uint8>,
  int,
  ffi.Pointer<ffi.Uint8>,
  int,
  ffi.Pointer<NativeHashlockSetEvent>,
);

typedef _DecodeAtomicReservationCreatedNative = ffi.Int32 Function(
  ffi.Pointer<ffi.Uint8>,
  ffi.Uint32,
  ffi.Pointer<ffi.Uint8>,
  ffi.Uint32,
  ffi.Pointer<NativeAtomicReservationCreatedEvent>,
);
typedef _DecodeAtomicReservationCreatedDart = int Function(
  ffi.Pointer<ffi.Uint8>,
  int,
  ffi.Pointer<ffi.Uint8>,
  int,
  ffi.Pointer<NativeAtomicReservationCreatedEvent>,
);

typedef _DecodeTrancheOpenedNative = ffi.Int32 Function(
  ffi.Pointer<ffi.Uint8>,
  ffi.Uint32,
  ffi.Pointer<ffi.Uint8>,
  ffi.Uint32,
  ffi.Pointer<NativeTrancheOpenedEvent>,
);
typedef _DecodeTrancheOpenedDart = int Function(
  ffi.Pointer<ffi.Uint8>,
  int,
  ffi.Pointer<ffi.Uint8>,
  int,
  ffi.Pointer<NativeTrancheOpenedEvent>,
);

typedef _DecodeTakerTrancheOpenedNative = ffi.Int32 Function(
  ffi.Pointer<ffi.Uint8>,
  ffi.Uint32,
  ffi.Pointer<ffi.Uint8>,
  ffi.Uint32,
  ffi.Pointer<NativeTakerTrancheOpenedEvent>,
);
typedef _DecodeTakerTrancheOpenedDart = int Function(
  ffi.Pointer<ffi.Uint8>,
  int,
  ffi.Pointer<ffi.Uint8>,
  int,
  ffi.Pointer<NativeTakerTrancheOpenedEvent>,
);

typedef _DecodeTrancheReservedNative = ffi.Int32 Function(
  ffi.Pointer<ffi.Uint8>,
  ffi.Uint32,
  ffi.Pointer<ffi.Uint8>,
  ffi.Uint32,
  ffi.Pointer<NativeTrancheReservedEvent>,
);
typedef _DecodeTrancheReservedDart = int Function(
  ffi.Pointer<ffi.Uint8>,
  int,
  ffi.Pointer<ffi.Uint8>,
  int,
  ffi.Pointer<NativeTrancheReservedEvent>,
);

typedef _DecodeTakerTrancheReservedNative = ffi.Int32 Function(
  ffi.Pointer<ffi.Uint8>,
  ffi.Uint32,
  ffi.Pointer<ffi.Uint8>,
  ffi.Uint32,
  ffi.Pointer<NativeTrancheReservedEvent>,
);
typedef _DecodeTakerTrancheReservedDart = int Function(
  ffi.Pointer<ffi.Uint8>,
  int,
  ffi.Pointer<ffi.Uint8>,
  int,
  ffi.Pointer<NativeTrancheReservedEvent>,
);

typedef _DecodeSettleNative = ffi.Int32 Function(
  ffi.Pointer<ffi.Uint8>,
  ffi.Uint32,
  ffi.Pointer<ffi.Uint8>,
  ffi.Uint32,
  ffi.Pointer<NativeSettleEvent>,
);
typedef _DecodeSettleDart = int Function(
  ffi.Pointer<ffi.Uint8>,
  int,
  ffi.Pointer<ffi.Uint8>,
  int,
  ffi.Pointer<NativeSettleEvent>,
);

typedef _OrchestratorNewNative = ffi.Int32 Function(
  ffi.Pointer<ffi.Void>,
  ffi.Pointer<ffi.Void>,
  ffi.Pointer<ffi.Void>,
  ffi.Pointer<ffi.Void>,
  ffi.Pointer<ffi.Void>,
  ffi.Pointer<ffi.Void>,
  ffi.Pointer<NativeOrchestratorConfig>,
  ffi.Pointer<ffi.Pointer<NativeFfiOrchestratorHandle>>,
);
typedef _OrchestratorNewDart = int Function(
  ffi.Pointer<ffi.Void>,
  ffi.Pointer<ffi.Void>,
  ffi.Pointer<ffi.Void>,
  ffi.Pointer<ffi.Void>,
  ffi.Pointer<ffi.Void>,
  ffi.Pointer<ffi.Void>,
  ffi.Pointer<NativeOrchestratorConfig>,
  ffi.Pointer<ffi.Pointer<NativeFfiOrchestratorHandle>>,
);

typedef _OrchestratorFreeNative = ffi.Void Function(
  ffi.Pointer<NativeFfiOrchestratorHandle>,
);
typedef _OrchestratorFreeDart = void Function(
  ffi.Pointer<NativeFfiOrchestratorHandle>,
);

typedef _OrchestratorResumeNative = ffi.Int32 Function(
  ffi.Pointer<NativeFfiOrchestratorHandle>,
  ffi.Pointer<ffi.Uint8>,
  ffi.Pointer<ffi.Pointer<ffi.Uint8>>,
  ffi.Pointer<ffi.Uint32>,
);
typedef _OrchestratorResumeDart = int Function(
  ffi.Pointer<NativeFfiOrchestratorHandle>,
  ffi.Pointer<ffi.Uint8>,
  ffi.Pointer<ffi.Pointer<ffi.Uint8>>,
  ffi.Pointer<ffi.Uint32>,
);

typedef _OrchestratorStepNative = ffi.Int32 Function(
  ffi.Pointer<NativeFfiOrchestratorHandle>,
  ffi.Pointer<ffi.Uint8>,
  ffi.Uint32,
  ffi.Pointer<ffi.Uint8>,
  ffi.Uint32,
  ffi.Pointer<ffi.Uint8>,
);
typedef _OrchestratorStepDart = int Function(
  ffi.Pointer<NativeFfiOrchestratorHandle>,
  ffi.Pointer<ffi.Uint8>,
  int,
  ffi.Pointer<ffi.Uint8>,
  int,
  ffi.Pointer<ffi.Uint8>,
);

typedef _OrchestratorCheckDeadlinesNative = ffi.Int32 Function(
  ffi.Pointer<NativeFfiOrchestratorHandle>,
  ffi.Pointer<NativeDeadlineEvent>,
  ffi.Uint32,
  ffi.Pointer<ffi.Uint32>,
);
typedef _OrchestratorCheckDeadlinesDart = int Function(
  ffi.Pointer<NativeFfiOrchestratorHandle>,
  ffi.Pointer<NativeDeadlineEvent>,
  int,
  ffi.Pointer<ffi.Uint32>,
);

typedef _FreeBufferNative = ffi.Void Function(
  ffi.Pointer<ffi.Uint8>,
  ffi.Uint32,
);
typedef _FreeBufferDart = void Function(
  ffi.Pointer<ffi.Uint8>,
  int,
);

typedef _FreeStringNative = ffi.Void Function(ffi.Pointer<ffi.Char>);
typedef _FreeStringDart = void Function(ffi.Pointer<ffi.Char>);

typedef _ErrorMessageNative = ffi.Int32 Function(
  ffi.Int32,
  ffi.Pointer<ffi.Pointer<ffi.Char>>,
);
typedef _ErrorMessageDart = int Function(
  int,
  ffi.Pointer<ffi.Pointer<ffi.Char>>,
);

class EqualXBindings {
  EqualXBindings([ffi.DynamicLibrary? dynamicLibrary])
      : _lib = dynamicLibrary ?? EqualXLibrary.instance() {
    wireVersion = _lib.lookupFunction<_WireVersionNative, _WireVersionDart>(
      'eswp_wire_version',
    );
    backendClsagId =
        _lib.lookupFunction<_BackendClsagNative, _BackendClsagDart>(
      'eswp_backend_clsag_id',
    );
    generateMoneroKeypair = _lib.lookupFunction<_GenerateMoneroKeypairNative,
        _GenerateMoneroKeypairDart>('eswp_generate_monero_keypair');
    moneroDeriveSubaddress = _lib.lookupFunction<_MoneroDeriveSubaddressNative,
        _MoneroDeriveSubaddressDart>('eswp_monero_derive_subaddress');
    moneroComputeKeyImage = _lib.lookupFunction<_MoneroComputeKeyImageNative,
        _MoneroComputeKeyImageDart>('eswp_monero_compute_key_image');
    generateEvmKeypair =
        _lib.lookupFunction<_GenerateEvmKeypairNative, _GenerateEvmKeypairDart>(
      'eswp_generate_evm_keypair',
    );
    signEvmMessage =
        _lib.lookupFunction<_SignEvmMessageNative, _SignEvmMessageDart>(
      'eswp_sign_evm_message',
    );
    clsagMakePreSig =
        _lib.lookupFunction<_ClsagMakePreSigNative, _ClsagMakePreSigDart>(
      'eswp_clsag_make_pre_sig',
    );
    clsagComplete =
        _lib.lookupFunction<_ClsagCompleteNative, _ClsagCompleteDart>(
      'eswp_clsag_complete',
    );
    clsagVerify = _lib.lookupFunction<_ClsagVerifyNative, _ClsagVerifyDart>(
      'eswp_clsag_verify',
    );
    clsagExtract = _lib.lookupFunction<_ClsagExtractNative, _ClsagExtractDart>(
      'eswp_clsag_extract_t',
    );
    prepareRefund =
        _lib.lookupFunction<_PrepareRefundNative, _PrepareRefundDart>(
      'eswp_prepare_refund',
    );
    lockEth = _lib.lookupFunction<_LockEthNative, _LockEthDart>(
      'eswp_escrow_lock_eth_call',
    );
    escrowRefund = _lib.lookupFunction<_RefundCallNative, _RefundCallDart>(
      'eswp_escrow_refund_call',
    );
    decodeEvents = _lib.lookupFunction<_DecodeEventsNative, _DecodeEventsDart>(
      'eswp_decode_escrow_events',
    );
    postTxHash = _lib.lookupFunction<_PostTxHashNative, _PostTxHashDart>(
      'eswp_post_tx_hash_call',
    );
    escrowSettle = _lib.lookupFunction<_SettleCallNative, _SettleCallDart>(
      'eswp_escrow_settle_call',
    );
    lockErc20 = _lib.lookupFunction<_LockErc20Native, _LockErc20Dart>(
      'eswp_escrow_lock_erc20_call',
    );
